bin_PROGRAMS = ccal
ccal_SOURCES = \
    action.h \
    appt.c \
    appt.h \
    cal.c \
    cal.h \
    curses_ui.c \
    curses_ui.h \
    debug.h \
    enter.c \
    enter.h \
    getline.c \
    getline.h \
    log.c \
    log.h \
    main.c \
    settings.c \
    settings.h \
    strutils.c \
    strutils.h \
    timeframe.c \
    timeframe.h \
	timeutils.c \
	timeutils.h \
    todo.c \
    todo.h \
	vector.h \
	vector.c
